work on index page

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Pet ID</th>
       <th>Name</th>
       <th>Breed</th>
       <th>Age</th>
@@ -15,6 +16,7 @@
   <tbody>
     <% @pets.each do |pet| %>
       <tr>
+        <td><%= pet.id %></td>
         <td><%= pet.name %></td>
         <td><%= pet.breed %></td>
         <td><%= pet.age %></td>
