add photos to pets, add some panels to pets show page

--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Pet</h1>
+<div class ='container'>
 
-<%= render 'form' %>
+	<h1>Editing Pet</h1>
 
-<%= link_to 'Show', @pet %> |
-<%= link_to 'Back', pets_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Show', @pet %> |
+	<%= link_to 'Back', pets_path %>
+
+</div>
