--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class='container'>
+
 
   <h1>Pets</h1>
 
@@ -39,6 +39,6 @@
 
   <br>
 
-  <%= link_to 'New Pet', new_pet_path %>
+<button type="button" class="btn btn-default"><%= link_to 'New Pet', new_pet_path %></button>
+  
 
-</div>
