--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@
 /*custom navbar colors*/
 
 .navbar-default {
-  background-color: #960200;
+  background-color: #241E4E;
   border-color: #241e4e;
 }
 .navbar-default .navbar-brand {
