add some content to index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,4 +6,50 @@
 
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
+<br>
+
+
+<div class="row">
+
+  <div class="col-md-6">
+
+  	<div class="panel panel-default">
+  		<div class="panel-heading">
+  			<h3>Pet Stuff</h3>
+  		</div>
+  			<div class="panel-body">
+    			<p>Lorem ipsum dolor sit amet, ubique dissentiunt ne pro, sea consul reformidans ut. At quidam petentium signiferumque eam, eu intellegat scripserit has. Te mei amet tamquam posidonium, et est ridens facilis. Ad sed modo epicuri qualisque, brute tation dictas ex vel.
+
+					At putent alienum inciderint est, his feugait inimicus consulatu te. Mea libris comprehensam eu, unum tibique duo eu. Omittam senserit eum ne, usu ea velit mundi tempor. Illum mollis perfecto no has, ad altera expetenda liberavisse nam, eum ex ridens utamur. Feugiat singulis sea an.
+
+					An pri vivendum insolens, eu ferri detracto vituperata eos. Pri oratio inciderint at. Nemore cetero numquam vix ei. Vis no eripuit eruditi honestatis, vix debet intellegebat ut, eos et tation intellegat. Quaeque dolores est ad, cu eum case debet intellegat, tibique consulatu moderatius ex quo. Alii dicant contentiones vim ex, probo urbanitas ne duo, ei accommodare deterruisset eos.
+					</p>
+  			</div>
+			</div>
+		</div>
+  	
+
+  
+
+  <div class="col-md-6">
+
+  	<div class="panel panel-default">
+  		<div class="panel-heading">
+  			<h3>Pet Stuff</h3>
+  		</div>
+  			<div class="panel-body">
+    			<p>
+					An pri vivendum insolens, eu ferri detracto vituperata eos. Pri oratio inciderint at. Nemore cetero numquam vix ei. Vis no eripuit eruditi honestatis, vix debet intellegebat ut, eos et tation intellegat. Quaeque dolores est ad, cu eum case debet intellegat, tibique consulatu moderatius ex quo. Alii dicant contentiones vim ex, probo urbanitas ne duo, ei accommodare deterruisset eos.
+
+					Usu dolor omnesque te, dicat clita laboramus mea ne. Te discere dissentiet disputationi duo, dicta euismod assentior ea mea, virtute denique sed ea. Periculis euripidis necessitatibus nec ne. Putent inermis assentior an vis, id nibh volumus dignissim per.
+
+					Saperet vocibus luptatum cu est. Cu illud facilisi vel, stet alienum ad mel. Dolorem graecis posidonium at mei. Ea novum sonet volumus mel, cum in congue argumentum. Ex sale virtute detracto qui, error accommodare pro in.
+					</p>
+  			</div>
+		</div>
+	</div>
+
+</div>
+
+
 
